# masters_project

./: .gitignore  Dockerfile  README.md  TOREAD.md  pyproject.toml  train.py
data/datasets/brain_tumor_mri_dataset_kaggle/: CITATIONS.bib  brain_tumor_mri_dataset_kaggle_dataset_builder.py  checksums.tsv
datasets/: README.md
datasets/brain_tumor_mri_dataset_kaggle/: README.md  brain_tumor_mri_dataset_kaggle_dataset_builder.py
datasets/brain_tumor_mri_kaggle/: brain_tumor_mri_dataset_kaggle_dataset_builder_test.py
dockerfiles/: base.Dockerfile
experiments/: armnet_experiment.py
models/: armnet.py  rmflayers.py
op/: dataset.py  evaluate.py  experiment.py  preprocess.py
playground/: analyse_results.ipynb  testing_datasets_cross_validation.py
scripts/: get_data.sh
utils/: gpu.py  image.py  logger.py  metadata.py  model_summary.py
